[package]
name = "crates"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "ws"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5.7"
